# EFlux

./: .dockerignore  .gitignore  2026-06-22.md  Dockerfile  README.md  Start EFlux (P2P Market).command  Start EFlux (Real-Time Price Market).command  Start EFlux.command  Stop EFlux.command  alembic.ini  config.env.example  docker-compose.yml  pyproject.toml  tasks.sh
.docx_build/: build_eflux_brief.py  build_eflux_simple.py  fontconfig.conf
.docx_build/font-cache/: 32ab93e2f16e41ae5991a077b8c9825a-le64.cache-9  84c0f976e30e948e99073af70f4ae876-le64.cache-11  9597096129db8cabb76a0ff1f969f580-le64.cache-11  9597096129db8cabb76a0ff1f969f580-le64.cache-9  c6cafe6b1a56ed8b739253d6df90ca6a-le64.cache-11  ce101aef39240722b4876e2d435c7998-le64.cache-9
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_managed_vpp_columns.py  0003_market_sessions_and_stat_snapshots.py  0004_forecast_outcomes.py  0005_user_roles.py  0006_competition_data_model.py  0007_prove_out_runs.py  0008_evaluation_evidence.py  0009_market_audit_events.py  0010_agent_ecosystem.py  0011_job_leases_and_snapshot_mode.py
checkpoints/: bc_primitive_p2p_v1.pt  bc_primitive_p2p_v4.pt  bc_primitive_realprice_grid_v1.pt  bc_primitive_realprice_grid_v4.pt  manifest.v1.json
deploy/: nginx.conf
docs/: A11Y_AUDIT.md  AGENT_ECOSYSTEM.md  AGENT_SPEC.md  ARCHITECTURE_AND_DESIGN.md  DEMO.md  EXTERNAL_PARTICIPATION.md  PRODUCT_PLAN_V1.md  REPRODUCIBLE_EVALUATION.md  TRADING_INTELLIGENCE_V1.md  TRADING_INTELLIGENCE_V2.md  TRADING_V1_ACCEPTANCE.md  TRADING_V2_ACCEPTANCE.md  agent_spec.schema.json  openapi.json
docs/adr/: 0001-delivery-physical-accounting.md
docs/handoffs/: 2026-07-03.md
examples/: agent_ecosystem_demo.py  guidance_bot.py  market_maker.py
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  competitions.ts  ecosystem.ts  proveout.ts  schema.gen.ts  types.ts
frontend/src/components/: AgentDock.tsx  AgentThoughtsFeed.tsx  BrandLogo.tsx  Chatroom.tsx  ConnectionBanner.tsx  DashboardCard.tsx  DataSourceBanner.tsx  EquityCurves.tsx  GridSettlementPanel.tsx  IntroStrip.tsx  KpiBar.tsx  LlmPpoInfluencePanel.tsx  MarketActivityRail.tsx  MeritOrderChart.tsx  NavBar.tsx  OrderBookDepth.tsx  PriceChart.tsx  ProveOutDailyPnlChart.tsx  RenewPpoButton.tsx  StrategyLeaderboard.tsx  TradeTape.tsx  WorkspaceNav.tsx  chartTheme.ts  chartZoom.ts  icons.tsx
frontend/src/lib/: arena.ts  categories.ts  format.ts  glass.ts
frontend/src/pages/: AgentReleaseDetail.tsx  AgentReleases.tsx  Arena.tsx  BehaviorDatasetDetail.tsx  BehaviorDatasets.tsx  Benchmarks.tsx  CompetitionDetail.tsx  CompetitionSubmit.tsx  Competitions.tsx  DeveloperConsole.tsx  EvaluationRuns.tsx  ForecastHub.tsx  Leaderboard.tsx  Login.tsx  MarketOverview.tsx  MyVPPs.tsx  P2PMarketOverview.tsx  Participants.tsx  ProveOut.tsx  ProveOutRun.tsx  RealTimeMarketOverview.tsx  SubmissionStatus.tsx  VppCockpit.tsx  VppDeploy.tsx  VppOverview.tsx  WelcomePage.tsx
frontend/src/state/: auth.tsx  marketMode.tsx  marketStream.tsx  theme.tsx  useServerEquity.ts  useStrategyPnl.ts
frontend/src/styles/: index 2.css  index.css
frontend/src/ws/: useMarketStream.ts
manuscript/: manuscript.md
scenarios/: default.yaml  p2p.yaml  realprice.yaml  strategy_demo.yaml
scripts/: generate_openapi_ts.py  start-all.sh  stop-all.sh  verify_checkpoints.py  ws_smoke.py  ws_smoke_proxy.py
scripts/docs/: build_eflux_brief.py  build_eflux_simple.py
src/eflux/: __init__.py  cli.py  config.py  job_leases.py
src/eflux/agents/: __init__.py  _baseline_common.py  aa_agent.py  base.py  character.py  decision.py  gas.py  gd_agent.py  truthful.py  zi.py  zip_agent.py
src/eflux/api/: deps.py  main.py  ratelimit.py
src/eflux/auth/: __init__.py  api_key.py  hashing.py  magic_link.py  session.py
src/eflux/backtest/: __init__.py  compare.py  runner.py
src/eflux/bridge/: __init__.py  bus.py  redis_bus.py  registry.py
src/eflux/compat/: __init__.py  v0.py
src/eflux/data/: __init__.py  caiso_reference.py  electricity_market.py  pv_model.py  weather.py
src/eflux/datasets/: __init__.py  training.py  trajectory.py
src/eflux/db/: __init__.py  base.py  models.py  session.py
src/eflux/ecosystem/: __init__.py  artifacts.py  catalog.py  deployment.py  (+9 more)
tests/: conftest.py
tests/integration/: conftest.py  test_agent_protocol.py  test_agent_protocol_v1.py  test_agent_protocol_v2.py  test_agent_release_constraints.py  test_algorithms_api.py  test_auth_flow.py  test_behavior_dataset_api.py  test_benchmarks_api.py  test_cancel_and_participants.py  test_chatroom_api.py  test_competitions_api.py  test_forecast_skill_and_presets.py  test_guidance_api.py  test_influence_metrics.py  test_leaderboard.py  test_managed_persistence.py  test_market_speed_lock.py  test_market_story_endpoints.py  test_order_flow.py  test_platform_examples.py  test_proveout_api.py  test_redis_bus.py  test_sdk.py  test_vpp_automation.py
tests/unit/: test_agent_contract_v1.py  test_agent_decision_v2.py  test_agent_memory.py  test_agent_release_contract.py  test_agent_spec.py  test_arb_iq.py  test_backtest.py  test_baseline_agents.py  test_battery_aware_strategy_policy.py  test_battery_balance.py  test_battery_delivery_v2.py  test_battery_reservations.py  test_bc.py  test_behavior_dataset_service.py  test_bench.py  test_bus.py  test_character.py  test_chat.py  test_clock.py  test_config.py  test_delivery_products.py  test_der.py  test_dispatch.py  test_economic_ledger.py  test_ecosystem_catalog.py  test_ecosystem_deployment.py  test_ecosystem_evidence.py  test_ecosystem_foundations.py  test_ecosystem_llm_replay.py  test_ecosystem_runtime.py  test_ecosystem_runtime_identity.py  test_ecosystem_training_pipeline.py  test_electricity_market.py  test_encoding_versions.py  test_evaluation_seeds.py  test_evaluation_worker.py  test_external_strategist.py  test_fair_decision_scheduler_v1.py  test_fallback_policy.py  test_forecast_aware_light_methods.py  (+58 more)
(+106 files in other folders)
