[project]
name = "eflux"
version = "1.0.0"
description = "Agent-based VPP electricity trading platform"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "redis[hiredis]>=5.2",
    "sortedcontainers>=2.4",
    "httpx>=0.28",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.28",
]

# Learning stack for the PPO agent (`./tasks.sh train-ppo`). The live policy is a
# custom torch actor-critic (online_ppo) warm-started by behavior cloning (bc); the
# Gymnasium env drives training rollouts. Optional because torch is large; the core
# app runs without it (agents fall back to the scripted policy).
ai = [
    "gymnasium>=1.0",
    "torch>=2.5",
]

# Real PV physics: Open-Meteo weather + pvlib ModelChain. Optional because pvlib
# pulls scipy/pandas — set EFLUX_PV_PHYSICAL=true and supply lat/lon on a VPP to enable.
data = [
    "pvlib>=0.11",
    "pandas>=2.2",
    "pyarrow>=18",
]

# MCP adapter (`python -m eflux.mcp.server`) — exposes the Agent Protocol v1 gateway as MCP
# tools for LLM hosts. Optional; the SDK (httpx, a core dep) is all an external agent needs.
mcp = [
    "mcp>=1.2",
]

[project.scripts]
eflux = "eflux.cli:main"
eflux-mcp = "eflux.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eflux"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
faulthandler_timeout = 120
faulthandler_exit_on_timeout = true
testpaths = ["tests"]
# Direct src import keeps local commands independent of editable-install .pth
# handling, including macOS hidden-file flags on dot directories.
pythonpath = ["src"]
filterwarnings = [
    # Pydantic v2 / SQLAlchemy 2 / asyncio emit a handful of DeprecationWarnings
    # we don't own. Promote real warnings from our own code by removing this line
    # when triaging upstream changes.
    "ignore::DeprecationWarning",
]
